Fix navigation margin on mobile

--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -55,6 +55,15 @@ nav {
   .nav-links {
     opacity: 1;
     transform: translateX(0);
+    // position: absolute;
+    // top: 0;
+    // left: 0;
+    // width: 100%;
+    margin: 0;
+  }
+
+  nav .container {
+    margin: 0 -4%;;
   }
 }
 
